[package]
name = "boringssl-src"
version = "0.1.0"
authors = ["Jay Lee <BusyJayLee@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/BusyJay/boringssl-src-rs"
description = """
A crate for building boringssl.
"""
exclude = [
    "boringssl/crypto_test_data.cc",
    "boringssl/src/fuzz",
    "boringssl/src/crypto/cipher_extra/test",
    "boringssl/src/crypto/fipsmodule/*.png",
    "boringssl/src/crypto/fipsmodule/policydocs/*",
    "boringssl/src/third_party/wycheproof_testvectors",
    "boringssl/src/third_party/googletest",
    "testcrate",
    ".github",
]
edition = "2018"

[dependencies]
cmake = "0.1"

[workspace]
members = ['testcrate']
